--- a/Python Scripts/Text clustering.ipynb
+++ b/Python Scripts/Text clustering.ipynb
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "0\n"
      ]
     }
    ],
@@ -84,89 +84,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "words ['000', '1d', '20', '2d', '3d', '70', 'abstractions', 'accelerating', 'acceleratio', 'acceleration', 'according', 'actual', 'actually', 'add', 'additional', 'adn', 'advantage', 'aggregation', 'allow', 'anonymization', 'apparently', 'applying', 'approximations', 'aren', 'arguably', 'aspect', 'assign', 'atomaton', 'attitude', 'automata', 'automaton', 'avoid', 'avoidance', 'avoids', 'away', 'ax', 'ball', 'bar', 'based', 'basic', 'begin', 'behaved', 'behavior', 'believe', 'belongs', 'better', 'beware', 'big', 'bit', 'body', 'bounce', 'bounces', 'break', 'bt', 'bu', 'build', 'building', 'buildings', 'bunch', 'buy', 'c1', 'c2', 'called', 'cancel', 'capture', 'captures', 'car', 'care', 'case', 'cases', 'catch', 'categorization', 'caused', 'celsius', 'center', 'change', 'changes', 'changing', 'character', 'chart', 'cheap', 'check', 'checks', 'choice', 'choices', 'circle', 'citation', 'claim', 'class', 'clearly', 'close', 'closest', 'coded', 'coding', 'collected', 'come', 'comfortable', 'compact', 'completed', 'complicated', 'component', 'compression', 'computed', 'concludes', 'condition', 'conditions', 'confidential', 'configuration', 'consider', 'contain', 'continuous', 'control', 'controlling', 'converting', 'convince', 'cool', 'cooling', 'copies', 'copy', 'corner', 'corresponds', 'cough', 'course', 'craft', 'current', 'cuz', 'cx', 'danger', 'data', 'dealing', 'decide', 'definitely', 'degrees', 'denominator', 'derivative', 'derivatives', 'deserves', 'design', 'designing', 'desired', 'desk', 'details', 'develop', 'developed', 'developing', 'did', 'didn', 'different', 'differential', 'dimension', 'dimensional', 'dimensions', 'direction', 'directions', 'discrete', 'discussion', 'display', 'distance', 'distribution', 'disturb', 'documentation', 'doesn', 'doing', 'don', 'dot', 'dots', 'double', 'downshift', 'driving', 'dropping', 'dynamic', 'dynamical', 'dynamics', 'earlier', 'earth', 'easier', 'easiest', 'easing', 'effecting', 'effective', 'effectively', 'elegant', 'encoded', 'encodes', 'encourage', 'end', 'energy', 'enters', 'entry', 'epsilon', 'epsilons', 'equal', 'equation', 'equilibrious', 'es', 'especially', 'evolving', 'exactly', 'example', 'examples', 'excess', 'excuse', 'experiencing', 'exploration', 'expressive', 'fact', 'factor', 'fahrenheit', 'far', 'fifth', 'file', 'files', 'finally', 'fine', 'finite', 'force', 'forced', 'forces', 'form', 'format', 'formats', 'frame', 'fsubq', 'fully', 'g12', 'g21', 'g23', 'g31', 'gas', 'gear', 'gears', 'general', 'generally', 'gets', 'getting', 'gives', 'glosses', 'goal', 'goes', 'going', 'good', 'gradient', 'gradients', 'graph', 'gravitational', 'gravity', 'greater', 'guard', 'guards', 'guys', 'handle', 'happen', 'happening', 'having', 'heard', 'heater', 'heaters', 'heating', 'help', 'hi', 'hidden', 'hide', 'hiding', 'humanoid', 'hybrid', 'idea', 'immediately', 'impact', 'important', 'include', 'inconsistencies', 'indefinitely', 'individual', 'innocent', 'input', 'inputs', 'inside', 'instance', 'instead', 'insure', 'interacting', 'interested', 'interesting', 'interview', 'introduce', 'introducing', 'invariant', 'involve', 'involving', 'jump', 'jumping', 'jumps', 'just', 'kinds', 'kinetics', 'know', 'larger', 'later', 'learn', 'lecture', 'let', 'lets', 'like', 'line', 'linear', 'lineup', 'little', 'll', 'logic', 'look', 'looking', 'looks', 'loraking', 'loses', 'lot', 'low', 'lower', 'lti', 'lump', 'machine', 'magically', 'make', 'making', 'map', 'mass', 'matrices', 'matrisis', 'matrix', 'matrixes', 'matter', 'matters', 'mean', 'meaning', 'means', 'messing', 'messy', 'methods', 'migrating', 'minor', 'mobile', 'modalities', 'mode', 'model', 'modeled', 'models', 'modes', 'module', 'moment', 'motion', 'moves', 'moving', 'multiple', 'multiplication', 'multiplications', 'multiply', 'naturally', 'need', 'needs', 'new', 'nonsense', 'normalization', 'note', 'notion', 'number', 'numbers', 'numerator', 'object', 'obstacle', 'obstacles', 'occur', 'oh', 'okay', 'old', 'ones', 'operate', 'operation', 'opposed', 'orientations', 'original', 'output', 'outputs', 'paper', 'particular', 'particularly', 'particulars', 'pedal', 'people', 'percentages', 'perform', 'phenomena', 'physical', 'pid', 'pie', 'piece', 'pieces', 'plural', 'plus', 'point', 'position', 'positions', 'possible', 'possibly', 'practice', 'predict', 'pressing', 'previous', 'prime', 'project', 'px', 'py', 'q2', 'qualitative', 'quantitative', 'questionnaires', 'quiet', 'quite', 'radius', 'ran', 'ratios', 'reach', 'reading', 'really', 'reason', 'reasons', 'recommend', 'references', 'reformulation', 'regulators', 'relative', 'relevant', 'remember', 'representations', 'researchers', 'reset', 'resets', 'resources', 'responses', 'return', 'revisit', 'rewritten', 'rich', 'right', 'rigid', 'rm', 'rn', 'robot', 'robotic', 'robotics', 'robots', 'role', 'rosy', 'rotating', 'rpm', 'running', 'safe', 'safely', 'said', 'sanity', 'satellites', 'saw', 'say', 'says', 'second', 'section', 'segment', 'sense', 'sensing', 'sensitive', 'separates', 'set', 'shared', 'shifter', 'shut', 'sign', 'similarly', 'simple', 'simplest', 'simply', 'singular', 'slack', 'slender', 'slight', 'smashing', 'sorry', 'sound', 'space', 'spacecraft', 'spinning', 'stabilize', 'stabilized', 'stable', 'standalone', 'standard', 'start', 'started', 'state', 'states', 'static', 'station', 'step', 'steroids', 'strings', 'stronger', 'study', 'studying', 'subtracting', 'sucking', 'sudden', 'suere', 'sum', 'summarize', 'supposed', 'sure', 'survey', 'sweethearts', 'switch', 'switched', 'switches', 'switching', 'systematic', 'systems', 'taking', 'talk', 'talking', 'tall', 'techniques', 'tell', 'tells', 'temperature', 'textual', 'theory', 'thermostat', 'thing', 'things', 'think', 'thinking', 'threshold', 'time', 'times', 'today', 'topic', 'torque', 'transcripts', 'transform', 'transformation', 'transformations', 'transformed', 'transition', 'transitions', 'translate', 'triple', 'true', 'trust', 'try', 'turn', 'turns', 'type', 'typically', 'typing', 'typos', 'understand', 'unfortunately', 'unlike', 'use', 'used', 'useful', 'usefull', 'using', 'usually', 'ux', 'value', 'values', 'variabl', 'variable', 'variables', 'variant', 've', 'vector', 'velocity', 'visualize', 'voila', 'want', 'warm', 'way', 'ways', 'weighs', 'welcome', 'whoop', 'wish', 'won', 'wonderful', 'words', 'work', 'worked', 'works', 'world', 'writ', 'write', 'writing', 'written', 'writting', 'wrong', 'x1', 'x2', 'x3', 'x4', 'xdot', 'zero']\n",
-      "centers: [[0.01910363 0.         0.05731088 ... 0.         0.09551813 0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         0.06915524]\n",
-      " [0.         0.01690157 0.         ... 0.01690157 0.         0.06662697]]\n",
-      "labels [3 2 1 0]\n",
-      "intertia: -2.55351295663786e-15\n",
+      "words ['airlines', 'airplanes', 'batman', 'better', 'birds', 'characters', 'defeats', 'dogs', 'fighting', 'houses', 'main', 'round', 'story', 'superman', 'talking', 'talks', 'text', 'trees']\n",
+      "centers: [[0.         0.         0.         0.         0.         0.\n",
+      "  0.         0.45718777 0.         0.53486839 0.         0.\n",
+      "  0.         0.         0.         0.27983771 0.27983771 0.30257906]\n",
+      " [0.54140529 0.54140529 0.         0.22630417 0.22630417 0.\n",
+      "  0.         0.         0.         0.         0.         0.\n",
+      "  0.16056958 0.         0.22630417 0.         0.         0.        ]\n",
+      " [0.         0.         0.47031955 0.         0.         0.\n",
+      "  0.27204122 0.         0.29455022 0.         0.         0.27204122\n",
+      "  0.20899219 0.47031955 0.         0.         0.         0.        ]\n",
+      " [0.         0.         0.         0.         0.         0.52016297\n",
+      "  0.         0.36907117 0.         0.         0.52016297 0.\n",
+      "  0.36907117 0.         0.         0.         0.         0.43177993]]\n",
+      "labels [0 1 0 3 2 1 2]\n",
+      "intertia: 1.5404174117179061\n",
       "Top words per cluster:\n",
-      "Cluster: 0 texts: 1\n",
-      "\tgoing\n",
-      "\tstate\n",
-      "\tmode\n",
-      "\tguard\n",
-      "\tjump\n",
-      "\tway\n",
-      "\tswitch\n",
-      "\tgoal\n",
-      "\tgear\n",
-      "\tbehavior\n",
-      "Cluster: 1 texts: 1\n",
-      "\tdata\n",
-      "\ttransformations\n",
-      "\texample\n",
-      "\tmodule\n",
-      "\ttransformation\n",
-      "\ttransform\n",
-      "\tresponses\n",
-      "\tnumber\n",
-      "\tanonymization\n",
-      "\twish\n",
-      "Cluster: 2 texts: 1\n",
-      "\tgravity\n",
-      "\tspacecraft\n",
-      "\tgradient\n",
-      "\tforce\n",
-      "\tattitude\n",
-      "\ttorque\n",
-      "\tobject\n",
-      "\tdifferent\n",
-      "\tlook\n",
-      "\tdistribution\n",
+      "Cluster: 0 texts: 2\n",
+      "\thouses\n",
+      "\tdogs\n",
+      "\ttrees\n",
+      "\ttalks\n",
+      "\ttext\n",
+      "\tdefeats\n",
+      "\tairplanes\n",
+      "\tbatman\n",
+      "\tbetter\n",
+      "\tbirds\n",
+      "Cluster: 1 texts: 2\n",
+      "\tairlines\n",
+      "\tairplanes\n",
+      "\ttalking\n",
+      "\tbetter\n",
+      "\tbirds\n",
+      "\tstory\n",
+      "\tdogs\n",
+      "\tbatman\n",
+      "\tcharacters\n",
+      "\tdefeats\n",
+      "Cluster: 2 texts: 2\n",
+      "\tbatman\n",
+      "\tsuperman\n",
+      "\tfighting\n",
+      "\tdefeats\n",
+      "\tround\n",
+      "\tstory\n",
+      "\tairplanes\n",
+      "\tbetter\n",
+      "\tbirds\n",
+      "\tcharacters\n",
       "Cluster: 3 texts: 1\n",
-      "\tdot\n",
-      "\tx2\n",
-      "\tgoing\n",
-      "\tx1\n",
-      "\tmatrix\n",
-      "\tactually\n",
-      "\twrite\n",
-      "\tsystems\n",
-      "\tsimply\n",
-      "\tdimensional\n",
+      "\tmain\n",
+      "\tcharacters\n",
+      "\ttrees\n",
+      "\tdogs\n",
+      "\tstory\n",
+      "\tairplanes\n",
+      "\tbatman\n",
+      "\tbetter\n",
+      "\tbirds\n",
+      "\tdefeats\n",
       "\n",
       "\n",
       "Prediction\n",
       "what we saw in the previous lecture was  how to model switch systems in a rather  general way using these things called  hybrid automaton.\n",
       "today, i want to show that just because  we know how to design good linear time  invariant controllers and we know how to  draw a hybrid automaton, doesn't mean  that we can just say, [sound] we're done,  we can do everything we want to be able  to do.\n",
       "in fact, what i want to do today is talk  to you about a rather famous counter  example that makes thinngs hard when  you're in the hybrid world.\n",
-      "Cluster: 0 texts: 2\n",
-      "\tgoing\n",
-      "\tstate\n",
-      "\tmode\n",
-      "\tguard\n",
-      "\tjump\n",
-      "\tway\n",
-      "\tswitch\n",
-      "\tgoal\n",
-      "\tgear\n",
-      "\tbehavior\n"
+      "Cluster: 2 texts: 3\n",
+      "\tbatman\n",
+      "\tsuperman\n",
+      "\tfighting\n",
+      "\tdefeats\n",
+      "\tround\n",
+      "\tstory\n",
+      "\tairplanes\n",
+      "\tbetter\n",
+      "\tbirds\n",
+      "\tcharacters\n"
      ]
     }
    ],
    "source": [
     "#example from online\n",
     "\n",
-    "\"\"\"\n",
+    "\n",
     "texts = [\"This first text talks about houses and dogs\",\n",
     "        \"This is about airplanes and airlines\",\n",
     "        \"This is about dogs and houses too, but also about trees\",\n",
@@ -174,7 +182,7 @@
     "        \"This story is about batman and superman fighting each other\", \n",
     "        \"Nothing better than another story talking about airplanes, airlines and birds\",\n",
     "        \"Superman defeats batman in the last round\"]\n",
-    "\"\"\"\n",
+    "\n",
     "\n",
     "# vectorization of the texts\n",
     "vectorizer = TfidfVectorizer(stop_words=\"english\")\n",
