collecting and organizing data for crowdsourcing

--- a/Python Scripts/CountingData.ipynb
+++ b/Python Scripts/CountingData.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,32 +20,27 @@
     "import glob\n",
     "import csv\n",
     "import re\n",
-    "import shutil"
+    "import shutil\n",
+    "import csv"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Count collected data files "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All files:  556\n",
-      "TXT files:  556\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\all coures to select from\"\n",
     "#import os\n",
@@ -85,42 +80,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## List files in directories"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Selected files TRAIN\n",
-      "--- CountingData.ipynb\n",
-      "--- Data Analysis.ipynb\n",
-      "--- Dictionary and N-Grams.ipynb\n",
-      "--- FullPreprocessing.ipynb\n",
-      "--- playground.ipynb\n",
-      "--- Text classification (dummy).ipynb\n",
-      "--- Text clustering.ipynb\n",
-      "--- TF-IDF+NLTK+wordnet+wikipedia.ipynb\n",
-      "--- TUD Lubrary data.ipynb\n",
-      "--- Selected files TRAIN\n",
-      "------ CountingData-checkpoint.ipynb\n",
-      "------ Data Analysis-checkpoint.ipynb\n",
-      "------ Dictionary and N-Grams-checkpoint.ipynb\n",
-      "------ FullPreprocessing-checkpoint.ipynb\n",
-      "------ playground-checkpoint.ipynb\n",
-      "------ Text classification (dummy)-checkpoint.ipynb\n",
-      "------ Text clustering-checkpoint.ipynb\n",
-      "------ TUD Lubrary data-checkpoint.ipynb\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
    "source": [
     "#files = glob.glob(root)\n",
     "\n",
@@ -143,8 +116,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sentence and labels count"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +222,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Select every 5th file for labeling\n",
     "\n",
@@ -252,7 +234,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\all coures to select from\"\n",
@@ -300,6 +284,199 @@
     "                \n",
     "\n",
     "#print(\"\\n<<< FILES: {} | SENTENCES: {} | FOLDERS: {} >>>\".format(fileCounter, sentCounter, folderCounter))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "### Check for empty files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Data for Crowdsourcing - UNLABELED\"\n",
+    "\n",
+    "fileCounter = 0\n",
+    "\n",
+    "for root, subdirs, files in os.walk(path):\n",
+    "\n",
+    "    for curFile in os.listdir(root):\n",
+    "\n",
+    "        curFilePath = os.path.join(root, curFile)\n",
+    "\n",
+    "        if os.path.isdir(curFilePath):\n",
+    "            pass\n",
+    "\n",
+    "        else:\n",
+    "            \n",
+    "            curFile = open(curFilePath, 'r', encoding = \"ISO-8859-1\") #IMPORTANT ENCODING! UTF8 DOESN'T WORK\n",
+    "\n",
+    "            lineCount = 0\n",
+    "            \n",
+    "            for line in curFile.read().split(\"\\n\"):\n",
+    "                lineCount += 1\n",
+    "                \n",
+    "            if lineCount < 2:\n",
+    "                print(\"Empty file: \", os.path.basename(curFilePath))\n",
+    "            \n",
+    "            curFile.close()                "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "### Splitting into HITS of 5 files each"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\all coures to select from\"\n",
+    "\n",
+    "fileCounter = 0\n",
+    "foldIndex = 0\n",
+    "\n",
+    "#folders = list(filter(lambda x: x%5 == 0, range[0:112])\n",
+    "folderNum = range(1, range[0:112]+1)\n",
+    "\n",
+    "for root, subdirs, files in os.walk(path):\n",
+    "\n",
+    "    for curFile in os.listdir(root):\n",
+    "\n",
+    "        curFilePath = os.path.join(root, curFile)\n",
+    "\n",
+    "        if os.path.isdir(curFilePath):\n",
+    "            pass\n",
+    "\n",
+    "        else:\n",
+    "            fileCounter += 1\n",
+    "            newDestinationRoot = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Data\\Hit\"\n",
+    "            \n",
+    "            if not fileCounter % 5 == 0:  \n",
+    "                print(newDestinationRoot)\n",
+    "            elif fileCounter % 5 == 0: \n",
+    "                newDestinationRoot = newDestinationRoot + folderNum(foldIndex)\n",
+    "                if not folderNum == len(folderNum)+1:\n",
+    "                    foldIndex += 1\n",
+    "                    print(newDestinationRoot)\n",
+    "\n",
+    "            curFile = open(curFilePath, 'r', encoding = \"ISO-8859-1\") #IMPORTANT ENCODING! UTF8 DOESN'T WORK\n",
+    "                \n",
+    "            # split the original path to parts and take the course folder name\n",
+    "            # combine it with the file name and put all files in a single course folder\n",
+    "            newLocation = newDestinationRoot\n",
+    "            print(newLocation)\n",
+    "            \n",
+    "            # if the dir doesn't exist, create it\n",
+    "            if not os.path.exists(newDestinationRoot):\n",
+    "                os.makedirs(newDestinationRoot)\n",
+    "\n",
+    "            # close file otherwise throws an err\n",
+    "            curFile.close()                \n",
+    "\n",
+    "            # copy the files\n",
+    "            #print(\"COPYING FILE #{}.. \\nSOURCE:\\t\\t {}\\nDESTINATION:\\t {} \\n\".format(fileCounter,curFile.name,newLocation))\n",
+    "            ##### UNCOMMENT TO COPY FILES ##### \n",
+    "            #shutil.copy(curFile.name, newLocation)\n",
+    "                \n",
+    "\n",
+    "#print(\"\\n<<< FILES: {} | SENTENCES: {} | FOLDERS: {} >>>\".format(fileCounter, sentCounter, folderCounter))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convert all files to CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Data for Crowdsourcing - UNLABELED\"\n",
+    "\n",
+    "data = []\n",
+    "\n",
+    "### go over the files and convert them to CSV   \n",
+    "\n",
+    "for root, subdirs, files in os.walk(path):\n",
+    "\n",
+    "    for curFile in os.listdir(root):\n",
+    "\n",
+    "        curFilePath = os.path.join(root, curFile)\n",
+    "\n",
+    "        if os.path.isdir(curFilePath):\n",
+    "            pass\n",
+    "\n",
+    "        else:\n",
+    "            if curFilePath.endswith(\".txt\"):\n",
+    "                curFile = open(curFilePath, 'r', encoding = \"ISO-8859-1\") #IMPORTANT ENCODING! UTF8 DOESN'T WORK\n",
+    "                fileExtRemoved = os.path.splitext(os.path.abspath(curFilePath))[0]\n",
+    "                #print(fileExtRemoved)\n",
+    "                fcontent = curFile.read().split(\"\\n\")\n",
+    "\n",
+    "                with open(fileExtRemoved+'.csv', 'w') as OutpCSV:\n",
+    "                    converter = csv.writer(OutpCSV, delimiter=',')\n",
+    "                    #converter.writerow([\"LABEL\",\"SENTENCE\"])\n",
+    "                    for line in fcontent:\n",
+    "                        line = line.split(\"|\")\n",
+    "                        if len(line) > 1:\n",
+    "                            converter.writerow([line[1]])\n",
+    "                        else:\n",
+    "                            pass\n",
+    "            else:\n",
+    "                pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Data for Crowdsourcing - UNLABELED\"\n",
+    "### concatenate files into one         \n",
+    "                    \n",
+    "from glob import glob\n",
+    "\n",
+    "with open(path+'\\singleDataFile.csv','a',encoding = \"utf-8\") as singleFile:\n",
+    "    for root, subdirs, files in os.walk(path):\n",
+    "        for curFile in os.listdir(root):\n",
+    "            curFilePath = os.path.join(root, curFile)\n",
+    "            if os.path.isdir(curFilePath):\n",
+    "                pass\n",
+    "            else:\n",
+    "                if curFilePath.endswith(\".csv\"):\n",
+    "                    with open(curFilePath, 'r', encoding = \"ISO-8859-1\") as iFile:\n",
+    "#                        next(iFile)\n",
+    "                        for line in iFile:\n",
+    "                            if len(line) == 1:\n",
+    "                                pass\n",
+    "                            else:\n",
+    "                                #print(line)\n",
+    "                                singleFile.write(line)\n",
+    "                else:\n",
+    "                    pass"
    ]
   }
  ],
