missing data fixing

--- a/Python Scripts/FullPreprocessing.ipynb
+++ b/Python Scripts/FullPreprocessing.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Preprocessing Part 1"
+    "### Preprocessing Part 1\n",
+    "\n",
+    "- extractTXTfromSRT()\n",
+    "- splitSentences()\n",
+    "- sentTokenize()\n",
+    "- rmPunctuationSent()\n",
+    "- rmStopWords()"
    ]
   },
   {
@@ -199,6 +205,33 @@
    "outputs": [],
    "source": [
     "# ------------------------------------------------ METHODS  --------------------------------------------------------\n",
+    "\n",
+    "def extractTXTfromSRT(iFile,oPathNoExt):\n",
+    "    if iFile.name.endswith(\".srt\"):\n",
+    "        print(\"[Splitting sentences on file:] \" + os.path.basename(iFile.name))   #file name only\n",
+    "        #print(\"[Splitting sentences on file:] \" + iFile.name)   # full file path\n",
+    "        baseName = oPathNoExt.split(\".en\", 1)[0]\n",
+    "        OFName = baseName + \".en_Raw.txt\"\n",
+    "                    \n",
+    "        timelinePat = re.compile('[0-9]+[:,-> ]+')\n",
+    "        numPat = re.compile('[0-9]+')\n",
+    "        emptyLinePat = re.compile(r'[0-9]+')\n",
+    "        \n",
+    "        content = iFile.read().split(\"\\n\")\n",
+    "        \n",
+    "        with open(OFName, \"w\") as oFile:\n",
+    "            for line in content:\n",
+    "                if timelinePat.match(line) or numPat.match(line):\n",
+    "                    pass\n",
+    "                elif emptyLinePat.match(line) or len(line) == 0:\n",
+    "                    pass\n",
+    "                else:\n",
+    "                    try:\n",
+    "                        oFile.write(line+\"\\n\")       \n",
+    "                    except UnicodeEncodeError:\n",
+    "                        pass\n",
+    "            \n",
+    "        \n",
     "\n",
     "# function #1    \n",
     "def splitSentences(iFile, oPathNoExt):\n",
@@ -311,9 +344,30 @@
     "    else:\n",
     "        pass\n",
     "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocessing Part 2\n",
+    "\n",
+    "- stripMultiSpace()\n",
+    "- rmSWSent()\n",
+    "- replaceNumsAndFunc()\n",
+    "- prepForLabeling()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def stripMultiSpace(iFile):\n",
     "    if iFile.name.endswith(\"_sentNoPunct.txt\"):\n",
-    "    #if iFile.name.endswith(\"_sentNoPunctWithCommDot.txt\"):\n",
+    "        #if iFile.name.endswith(\"_sentNoPunctWithCommDot.txt\"):\n",
     "        print(\"[Removing MultiSpace: ] \" + os.path.basename(iFile.name))\n",
     "        \n",
     "        baseName = iFile.name.split(\".en\", 1)[0]\n",
@@ -425,20 +479,47 @@
     "            print(\"CANNOT PROCESS (FileNotFoundError): \" + curFile.name)\n",
     "            pass\n",
     "    else:\n",
-    "        pass"
+    "        pass\n",
+    "    \n",
+    "\n",
+    "def toLower(iFile):\n",
+    "    baseName = iFile.name.split(\".en\", 1)[0]\n",
+    "    endName = iFile.name.split(\".en\", 1)[1]\n",
+    "    fullName = baseName+\".en\"+endName\n",
+    "    print(fullName)\n",
+    "    text = \"\"\n",
+    "    \n",
+    "    content = iFile.read().split(\"\\n\")\n",
+    "    \n",
+    "    for line in content:\n",
+    "        text += line+\"\\n\"\n",
+    "    \n",
+    "    with open(fullName, \"w\") as oFile:\n",
+    "        for line in text:\n",
+    "            oFile.write(line.lower())\n",
+    "            "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "### Preprocessing Part 2"
+    "### Preprocessing Part 3\n",
+    "\n",
+    "- POStag() \n",
+    "- stem()\n",
+    "- lemmatize()\n",
+    "- cleanup()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# function #5 - partOfSpeechTag Tagging\n",
@@ -560,8 +641,8 @@
     "                print(\"SKIPPING: (FileInUse)\",err,\"\\n\")\n",
     "                pass\n",
     "    \"\"\"\n",
-    "    #if not iFile.name.endswith(\".en_labels.txt\"):\n",
     "    if not iFile.name.endswith(\".en_labels.txt\"):\n",
+    "    #if not iFile.name.endswith(\".srt\"):\n",
     "        try:\n",
     "            print(\"DELETING FILE: \",iFile.name)\n",
     "            os.remove(iFile.name)\n",
@@ -579,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {
     "scrolled": false
    },
@@ -588,8 +669,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Selected files TRAIN\\spacecraft-dynamics-kinetics\\01_1-continuous-system-super-particle-theorem.en_labels.txt\n",
+      "C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Selected files TRAIN\\spacecraft-dynamics-kinetics\\01_5-rigid-body-angular-momentum.en_labels.txt\n",
+      "C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Selected files TRAIN\\spacecraft-dynamics-kinetics\\01_module-4-introduction.en_labels.txt\n",
+      "C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Selected files TRAIN\\spacecraft-dynamics-kinetics\\03_1-1-gravity-gradient-torque-in-body-frame.en_labels.txt\n",
+      "C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Selected files TRAIN\\spacecraft-dynamics-kinetics\\04_9-example-dual-spinner-stability.en_labels.txt\n",
+      "C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Selected files TRAIN\\spacecraft-dynamics-kinetics\\05_3-torque-free-motion-general-inertia-case.en_labels.txt\n",
+      "C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Selected files TRAIN\\spacecraft-dynamics-kinetics\\06_4-vscmg-eom-variations.en_labels.txt\n",
+      "C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Selected files TRAIN\\spacecraft-dynamics-kinetics\\06_8-rigid-body-equations-of-motion.en_labels.txt\n",
+      "C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Selected files TRAIN\\spacecraft-dynamics-kinetics\\10_6-example-phase-space-plot-of-duffing-equation.en_labels.txt\n",
+      "C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Selected files TRAIN\\spacecraft-dynamics-kinetics\\11_optional-review-rigid-body-equations-of-motion.en_labels.txt\n",
       "\n",
-      "Total number of 558 TXT files found.\n"
+      "Total number of 10 TXT files found.\n"
      ]
     }
    ],
@@ -597,7 +688,8 @@
     "# ----------------------------------------------- MAIN PROGRAM  -------------------------------------------------------\n",
     "\n",
     "#path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Selected files TRAIN\"\n",
-    "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads Extracted raw\"\n",
+    "#path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads Extracted raw\"\n",
+    "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Selected files TRAIN\\spacecraft-dynamics-kinetics\"\n",
     "counter = 0\n",
     "\n",
     "for root, subdirs, files in os.walk(path):\n",
@@ -610,9 +702,23 @@
     "            pass\n",
     "\n",
     "        else:\n",
-    "            if not filePath.endswith(\".txt\"):\n",
-    "                pass\n",
-    "            else: \n",
+    "            if filePath.endswith(\".srt\"):\n",
+    "                # to execute this part, change execute from 0 to 1\n",
+    "                execute = 0\n",
+    "                \n",
+    "                # extract raw data from SRT files\n",
+    "                if execute == 1:\n",
+    "                    curFile = open(filePath, 'r', encoding = \"utf-8\") #IMPORTANT ENCODING! UTF8 DOESN'T WORK\n",
+    "                    fileExtRemoved = os.path.splitext(os.path.abspath(filePath))[0]\n",
+    "                    try:\n",
+    "                        extractTXTfromSRT(curFile,fileExtRemoved)\n",
+    "                    except FileNotFoundError:\n",
+    "                        print(\"SKIPPING: \",curFile.name)\n",
+    "                        pass\n",
+    "                    curFile.close()\n",
+    "                else: \n",
+    "                    pass\n",
+    "            elif filePath.endswith(\".txt\"): \n",
     "                try: \n",
     "                    counter += 1\n",
     "                    #fileName = print(os.path.abspath(filePath))\n",
@@ -641,7 +747,8 @@
     "                        stripMultiSpace\t\t>>\t_sentNoPunctWithCommDot\n",
     "                        rmSWSent \t\t\t>>\t_sentNoPunctEnhanced\n",
     "                        \"\"\"  \n",
-    "                        splitSentences(curFile, fileExtRemoved)\n",
+    "                        \n",
+    "                        #splitSentences(curFile, fileExtRemoved)\n",
     "                        #sentTokenize(curFile, fileExtRemoved)\n",
     "                        #rmStopWords(curFile, fileExtRemoved)\n",
     "                        #POStag(curFile, fileExtRemoved)\n",
@@ -652,9 +759,11 @@
     "                        #rmSWSent(curFile, fileExtRemoved)\n",
     "                        #replaceNumsAndFunc(curFile, fileExtRemoved)\n",
     "                        #prepForLabeling(curFile, fileExtRemoved)\n",
-    "                        \n",
+    "                        #toLower(curFile)\n",
+    "                            \n",
     "                        curFile.close()\n",
     "                        #cleanup(curFile)\n",
+    "                       \n",
     "                        \n",
     "                        # for sentence processing: run one after another: rmPunctuationSent(), replaceNumsAndFunc(),\n",
     "                        # prepForLabeling() and cleanup()\n",
@@ -668,7 +777,8 @@
     "                    \n",
     "                finally: \n",
     "                    curFile.close()\n",
-    "                    \n",
+    "            else:\n",
+    "                pass\n",
     "                    \n",
     "        \"\"\" #### USE ONLY TO CLEANUP DATA - DELETED SRT files\n",
     "        if filePath.endswith(\".srt\"):\n",
