extracting metadata from tud lib

--- a/Python Scripts/TUD Library data.ipynb
+++ b/Python Scripts/TUD Library data.ipynb
@@ -32,29 +32,62 @@
     "Alternatives\n",
     "- https://gist.github.com/lawlesst/1323535\n",
     "- https://pypi.org/project/oaiharvest/\n",
-    "- https://github.com/infrae/pyoai"
+    "- https://github.com/infrae/pyoai\n",
+    "\n",
+    "Set the IOPub data rate limit: https://github.com/jupyter/notebook/issues/2287\n",
+    "\n",
+    "run `jupyter notebook --NotebookApp.iopub_data_rate_limit=10000000000`\n",
+    "\n",
+    "To change this limit, set the config variable\n",
+    "`--NotebookApp.iopub_data_rate_limit`.\n",
+    "\n",
+    "Current values:\n",
+    "\n",
+    "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
+    "\n",
+    "NotebookApp.rate_limit_window=3.0 (secs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sickle import Sickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sickle = Sickle('http://oai.tudelft.nl/ir')\n",
+    "records = sickle.ListRecords( **{'metadataPrefix': 'oai_dc', 'ignore_deleted': 'True'})\n",
+    "\n",
+    "oFilePath = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\TUDelftLibMetadata.xml\"\n",
+    "\n",
+    "with open(oFilePath, 'w', encoding = \"utf-8\") as oFile:\n",
+    "    for rec in records:\n",
+    "        #print(rec.header)\n",
+    "        oFile.write(str(rec))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Sickle' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-646e845e2116>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mitems\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0msickle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSickle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'http://oai.tudelft.nl/ir'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mrecords\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mListRecords\u001b[0m\u001b[1;33m(\u001b[0m \u001b[1;33m**\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'metadataPrefix'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m'oai_dc'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'ignore_deleted'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m'True'\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Sickle' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing metadata\n"
      ]
     }
    ],
    "source": [
-    "import sickle\n",
-    "\n",
     "items = {}\n",
     "\n",
     "sickle = Sickle('http://oai.tudelft.nl/ir')\n",
@@ -65,7 +98,29 @@
     "for r in records:\n",
     "    uuid = ''\n",
     "    uuid = r.metadata['identifier'][0][32:]\n",
-    "    items[uuid] = r.metadata"
+    "    items[uuid] = r.metadata\n",
+    "\n",
+    "print(len(items))\n",
+    "print(items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from oaipmh.client import Client\n",
+    "from oaipmh.metadata import MetadataRegistry, oai_dc_reader\n",
+    "\n",
+    "URL = 'http://oai.tudelft.nl/ir'\n",
+    "\n",
+    "registry = MetadataRegistry()\n",
+    "registry.registerReader('oai_dc', oai_dc_reader)\n",
+    "client = Client(URL, registry)\n",
+    "\n",
+    "for record in client.listRecords(metadataPrefix='oai_dc'):\n",
+    "   print(record)"
    ]
   }
  ],
