looking for intent mining models

--- a/Python Scripts/TUD Library data.ipynb
+++ b/Python Scripts/TUD Library data.ipynb
@@ -59,19 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "sickle = Sickle('http://oai.tudelft.nl/ir')\n",
     "records = sickle.ListRecords( **{'metadataPrefix': 'oai_dc', 'ignore_deleted': 'True'})\n",
     "\n",
-    "oFilePath = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\TUDelftLibMetadata.xml\"\n",
+    "oFilePath = r\"C:\\Users\\a.dimitrova\\Desktop\\Course data Thesis\\TUDelftLibMetadataPART.xml\"\n",
     "\n",
     "with open(oFilePath, 'w', encoding = \"utf-8\") as oFile:\n",
-    "    for rec in records:\n",
+    "    for i,rec in enumerate(records):\n",
     "        #print(rec.header)\n",
-    "        oFile.write(str(rec))"
+    "        # extract only 1/3rd of the data as the file is too big otherwise (150 mb)\n",
+    "        if i % 3 == 0:\n",
+    "            oFile.write(str(rec))"
    ]
   },
   {
